--- a/index.html
+++ b/index.html
@@ -60,28 +60,48 @@
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="feature-list">
-            <li class="feature-item">
+            <li class="feature-point">
+              <button class="feature-cloud">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </button>
               <h3 class="card-title">Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="feature-item">
+            <li class="feature-point">
+              <button class="feature-cloud">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </button>
               <h3 class="card-title">Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="feature-item">
+            <li class="feature-point">
+              <button class="feature-cloud">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#icon-schedule"></use>
+                </svg>
+              </button>
               <h3 class="card-title">Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="feature-item">
+            <li class="feature-point">
+              <button class="feature-cloud">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </button>
               <h3 class="card-title">Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -135,7 +155,40 @@
               />
               <div class="colleagues-text">
                 <h3 class="colleagues-title">Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <p class="team-text">Product Designer</p>
+                <ul class="social">
+                  <li class="point">
+                    <a
+                      href="https://www.instagram.com/https://www.instagram.com/"
+                      class="social-link"
+                    >
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="term">
@@ -147,7 +200,40 @@
               />
               <div class="colleagues-text">
                 <h3 class="colleagues-title">Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <p class="team-text">Frontend Developer</p>
+                <ul class="social">
+                  <li class="point">
+                    <a
+                      href="https://www.instagram.com/https://www.instagram.com/"
+                      class="social-link"
+                    >
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="term">
@@ -159,7 +245,40 @@
               />
               <div class="colleagues-text">
                 <h3 class="colleagues-title">Camila Garcia</h3>
-                <p>Marketing</p>
+                <p class="team-text">Marketing</p>
+                <ul class="social">
+                  <li class="point">
+                    <a
+                      href="https://www.instagram.com/https://www.instagram.com/"
+                      class="social-link"
+                    >
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="term">
@@ -171,9 +290,55 @@
               />
               <div class="colleagues-text">
                 <h3 class="colleagues-title">Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <p class="team-text">UI Designer</p>
+                <ul class="social">
+                  <li class="point">
+                    <a
+                      href="https://www.instagram.com/https://www.instagram.com/"
+                      class="social-link"
+                    >
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point">
+                    <a href="portfolio.html">
+                      <svg class="social-icon">
+                        <use href="./images/sprite.svg#icon-Linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div class="container-customers">
+          <h2 class="section-title">Customers</h2>
+          <ul class="customers">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
           </ul>
         </div>
       </section>
