--- a/portfolio.html
+++ b/portfolio.html
@@ -172,15 +172,50 @@
     </main>
     <footer class="foot">
       <div class="container">
-        <div class="coda">
-          <a href="/index.html" class="logo-daun"
-            ><span class="iris">Web</span
-            ><span class="foot-logo">Studio</span></a
-          >
-          <p class="foot-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+        <div class="foot-content">
+          <div class="coda">
+            <a href="/index.html" class="logo-daun"
+              ><span class="iris">Web</span
+              ><span class="foot-logo">Studio</span></a
+            >
+            <p class="foot-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="media">
+            <h2 class="media-title">Social media</h2>
+            <ul class="social-media">
+              <li>
+                <a href="https://www.instagram.com/">
+                  <svg class="media-icon">
+                    <use href="./images/sprite.svg#icon-Instagram2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="point">
+                <a href="https://twitter.com">
+                  <svg class="media-icon">
+                    <use href="./images/sprite.svg#icon-Twitter2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="point">
+                <a href="https://www.facebook.com">
+                  <svg class="media-icon">
+                    <use href="./images/sprite.svg#icon-Facebook2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="point">
+                <a href="https://ua.linkedin.com/">
+                  <svg class="media-icon">
+                    <use href="./images/sprite.svg#icon-Linkedin2"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
