--- a/index.html
+++ b/index.html
@@ -168,21 +168,21 @@
                     </a>
                   </li>
                   <li class="point">
-                    <a href="portfolio.html">
+                    <a href="https://ua.linkedin.com/">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-Twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="point">
-                    <a href="portfolio.html">
+                    <a href="https://ua.linkedin.com/">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-Facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="point">
-                    <a href="portfolio.html">
+                    <a href="https://ua.linkedin.com/">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-Linkedin"></use>
                       </svg>
@@ -329,31 +329,102 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="guests">
         <div class="container-customers">
           <h2 class="section-title">Customers</h2>
           <ul class="customers">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+              <button class="customers-card">
+                <svg class="customers-icon" width="41" height="47">
+                  <use href="./images/sprite.svg#icon-group1"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="customers-card">
+                <svg class="customers-icon" width="40" height="52">
+                  <use href="./images/sprite.svg#icon-group6"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="customers-card">
+                <svg class="customers-icon" width="44" height="41">
+                  <use href="./images/sprite.svg#icon-group2"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="customers-card">
+                <svg class="customers-icon" width="84" height="41">
+                  <use href="./images/sprite.svg#icon-group3"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="customers-card">
+                <svg class="customers-icon" width="63" height="45">
+                  <use href="./images/sprite.svg#icon-group4"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="customers-card">
+                <svg class="customers-icon" width="94" height="44">
+                  <use href="./images/sprite.svg#icon-group5"></use>
+                </svg>
+              </button>
+            </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="foot">
       <div class="container">
-        <div class="coda">
-          <a href="/index.html" class="logo-daun"
-            ><span class="iris">Web</span
-            ><span class="foot-logo">Studio</span></a
-          >
-          <p class="foot-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+        <div class="foot-content">
+          <div class="coda">
+            <a href="/index.html" class="logo-daun"
+              ><span class="iris">Web</span
+              ><span class="foot-logo">Studio</span></a
+            >
+            <p class="foot-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="media">
+            <h2 class="media-title">Social media</h2>
+            <ul class="social-media">
+              <li>
+                <a href="https://www.instagram.com/https://www.instagram.com/">
+                  <svg class="media-icon">
+                    <use href="./images/sprite.svg#icon-Instagram2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="point">
+                <a href="https://twitter.com">
+                  <svg class="media-icon">
+                    <use href="./images/sprite.svg#icon-Twitter2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="point">
+                <a href="https://www.facebook.com">
+                  <svg class="media-icon">
+                    <use href="./images/sprite.svg#icon-Facebook2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="point">
+                <a href="https://ua.linkedin.com/">
+                  <svg class="media-icon">
+                    <use href="./images/sprite.svg#icon-Linkedin2"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
