--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="feature-list">
             <li class="feature-point">
-              <button class="feature-cloud">
+              <div class="feature-cloud">
                 <svg class="feature-icon">
                   <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
-              </button>
+              </div>
               <h3 class="card-title">Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -73,11 +73,11 @@
               </p>
             </li>
             <li class="feature-point">
-              <button class="feature-cloud">
+              <div class="feature-cloud">
                 <svg class="feature-icon">
                   <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
-              </button>
+              </div>
               <h3 class="card-title">Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -85,11 +85,11 @@
               </p>
             </li>
             <li class="feature-point">
-              <button class="feature-cloud">
+              <div class="feature-cloud">
                 <svg class="feature-icon">
                   <use href="./images/sprite.svg#icon-schedule"></use>
                 </svg>
-              </button>
+              </div>
               <h3 class="card-title">Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
@@ -97,11 +97,11 @@
               </p>
             </li>
             <li class="feature-point">
-              <button class="feature-cloud">
+              <div class="feature-cloud">
                 <svg class="feature-icon">
                   <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
-              </button>
+              </div>
               <h3 class="card-title">Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -157,36 +157,36 @@
                 <h3 class="colleagues-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
                 <ul class="social">
-                  <li class="point">
-                    <a
+                  <li>
+                    <button
                       href="https://www.instagram.com/https://www.instagram.com/"
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Instagram"></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="https://ua.linkedin.com/">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Twitter"></use>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="https://ua.linkedin.com/">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Facebook"></use>
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="https://ua.linkedin.com/">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Linkedin"></use>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -202,36 +202,36 @@
                 <h3 class="colleagues-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
                 <ul class="social">
-                  <li class="point">
-                    <a
+                  <li>
+                    <button
                       href="https://www.instagram.com/https://www.instagram.com/"
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Instagram"></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="portfolio.html">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Twitter"></use>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="portfolio.html">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Facebook"></use>
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="portfolio.html">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Linkedin"></use>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -247,36 +247,36 @@
                 <h3 class="colleagues-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
                 <ul class="social">
-                  <li class="point">
-                    <a
+                  <li>
+                    <button
                       href="https://www.instagram.com/https://www.instagram.com/"
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Instagram"></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="portfolio.html">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Twitter"></use>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="portfolio.html">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Facebook"></use>
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="portfolio.html">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Linkedin"></use>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -292,36 +292,36 @@
                 <h3 class="colleagues-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
                 <ul class="social">
-                  <li class="point">
-                    <a
+                  <li>
+                    <button
                       href="https://www.instagram.com/https://www.instagram.com/"
                       class="social-link"
                     >
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Instagram"></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="portfolio.html">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Twitter"></use>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="portfolio.html">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Facebook"></use>
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
-                  <li class="point">
-                    <a href="portfolio.html">
+                  <li>
+                    <button href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-Linkedin"></use>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
-                    </a>
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -334,46 +334,46 @@
           <h2 class="section-title">Customers</h2>
           <ul class="customers">
             <li>
-              <button class="customers-card">
+              <a href="" class="customers-card">
                 <svg class="customers-icon" width="41" height="47">
                   <use href="./images/sprite.svg#icon-group1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="customers-card">
+              <a href="" class="customers-card">
                 <svg class="customers-icon" width="40" height="52">
                   <use href="./images/sprite.svg#icon-group6"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="customers-card">
+              <a href="" class="customers-card">
                 <svg class="customers-icon" width="44" height="41">
                   <use href="./images/sprite.svg#icon-group2"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="customers-card">
+              <a href="" class="customers-card">
                 <svg class="customers-icon" width="84" height="41">
                   <use href="./images/sprite.svg#icon-group3"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="customers-card">
+              <a href="" class="customers-card">
                 <svg class="customers-icon" width="63" height="45">
                   <use href="./images/sprite.svg#icon-group4"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="customers-card">
+              <a href="" class="customers-card">
                 <svg class="customers-icon" width="94" height="44">
                   <use href="./images/sprite.svg#icon-group5"></use>
                 </svg>
-              </button>
+              </a>
             </li>
           </ul>
         </div>
@@ -395,33 +395,36 @@
           <div class="media">
             <h2 class="media-title">Social media</h2>
             <ul class="social-media">
-              <li>
-                <a href="https://www.instagram.com/https://www.instagram.com/">
+              <li class="point">
+                <button
+                  class="media-item"
+                  href="https://www.instagram.com/https://www.instagram.com/"
+                >
                   <svg class="media-icon">
-                    <use href="./images/sprite.svg#icon-Instagram2"></use>
+                    <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
-                </a>
+                </button>
               </li>
               <li class="point">
-                <a href="https://twitter.com">
+                <button class="media-item" href="https://twitter.com">
                   <svg class="media-icon">
-                    <use href="./images/sprite.svg#icon-Twitter2"></use>
+                    <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
-                </a>
+                </button>
               </li>
               <li class="point">
-                <a href="https://www.facebook.com">
+                <button class="media-item" href="https://www.facebook.com">
                   <svg class="media-icon">
-                    <use href="./images/sprite.svg#icon-Facebook2"></use>
+                    <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
-                </a>
+                </button>
               </li>
               <li class="point">
-                <a href="https://ua.linkedin.com/">
+                <button class="media-item" href="https://ua.linkedin.com/">
                   <svg class="media-icon">
-                    <use href="./images/sprite.svg#icon-Linkedin2"></use>
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
-                </a>
+                </button>
               </li>
             </ul>
           </div>
