--- a/portfolio.html
+++ b/portfolio.html
@@ -24,12 +24,12 @@
             >
             <ul class="menu-nav">
               <li class="item">
-                <a href="./index.html" class="link"
-                  ><span class="iris">Studio</span></a
-                >
+                <a href="./index.html" class="link">Studio</a>
               </li>
               <li class="item">
-                <a href="./portfolio.html" class="link">Portfolio</a>
+                <a href="./portfolio.html" class="link"
+                  ><span class="iris">Portfolio</span></a
+                >
               </li>
               <li class="item"><a href="" class="link">Contacts</a></li>
             </ul>
