друге доопрацювання ДЗ 4

--- a/portfolio.html
+++ b/portfolio.html
@@ -186,31 +186,34 @@
           <div class="media">
             <h2 class="media-title">Social media</h2>
             <ul class="social-media">
-              <li>
-                <a href="https://www.instagram.com/">
+              <li class="point">
+                <a
+                  class="media-item"
+                  href="https://www.instagram.com/https://www.instagram.com/"
+                >
                   <svg class="media-icon">
-                    <use href="./images/sprite.svg#icon-Instagram2"></use>
+                    <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="point">
-                <a href="https://twitter.com">
+                <a class="media-item" href="https://twitter.com">
                   <svg class="media-icon">
-                    <use href="./images/sprite.svg#icon-Twitter2"></use>
+                    <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="point">
-                <a href="https://www.facebook.com">
+                <a class="media-item" href="https://www.facebook.com">
                   <svg class="media-icon">
-                    <use href="./images/sprite.svg#icon-Facebook2"></use>
+                    <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="point">
-                <a href="https://ua.linkedin.com/">
+                <a class="media-item" href="https://ua.linkedin.com/">
                   <svg class="media-icon">
-                    <use href="./images/sprite.svg#icon-Linkedin2"></use>
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
