--- a/index.html
+++ b/index.html
@@ -158,35 +158,39 @@
                 <p class="team-text">Product Designer</p>
                 <ul class="social">
                   <li>
-                    <button
+                    <a
                       href="https://www.instagram.com/https://www.instagram.com/"
                       class="social-link"
                     >
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use
+                          href="./images/sprite.svg#icon-twitter"
+                          width="16"
+                          height="16"
+                        ></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -203,35 +207,35 @@
                 <p class="team-text">Frontend Developer</p>
                 <ul class="social">
                   <li>
-                    <button
+                    <a
                       href="https://www.instagram.com/https://www.instagram.com/"
                       class="social-link"
                     >
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -248,35 +252,35 @@
                 <p class="team-text">Marketing</p>
                 <ul class="social">
                   <li>
-                    <button
+                    <a
                       href="https://www.instagram.com/https://www.instagram.com/"
                       class="social-link"
                     >
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -293,35 +297,35 @@
                 <p class="team-text">UI Designer</p>
                 <ul class="social">
                   <li>
-                    <button
+                    <a
                       href="https://www.instagram.com/https://www.instagram.com/"
                       class="social-link"
                     >
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                   <li>
-                    <button href="https://ua.linkedin.com/" class="social-link">
+                    <a href="https://ua.linkedin.com/" class="social-link">
                       <svg class="social-icon">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -396,35 +400,35 @@
             <h2 class="media-title">Social media</h2>
             <ul class="social-media">
               <li class="point">
-                <button
+                <a
                   class="media-item"
                   href="https://www.instagram.com/https://www.instagram.com/"
                 >
                   <svg class="media-icon">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
-                </button>
+                </a>
               </li>
               <li class="point">
-                <button class="media-item" href="https://twitter.com">
+                <a class="media-item" href="https://twitter.com">
                   <svg class="media-icon">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
-                </button>
+                </a>
               </li>
               <li class="point">
-                <button class="media-item" href="https://www.facebook.com">
+                <a class="media-item" href="https://www.facebook.com">
                   <svg class="media-icon">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
-                </button>
+                </a>
               </li>
               <li class="point">
-                <button class="media-item" href="https://ua.linkedin.com/">
+                <a class="media-item" href="https://ua.linkedin.com/">
                   <svg class="media-icon">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
-                </button>
+                </a>
               </li>
             </ul>
           </div>
